--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "gl_nodejs",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "tutorial-2/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node main.js"
+    "start": "node tutorial-1/main.js"
   },
   "repository": {
     "type": "git",
